@@ -1,3 +1,10 @@
+Thu Jun 17 07:58:29 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/dds/ContentFilterSetting.cpp:
+        * connectors/dds4ccm/impl/dds/ContentFilteredTopic.cpp:
+        * connectors/dds4ccm/impl/dds/Getter_T.cpp:
+          Const, layout, and memory management changes
+
 Thu Jun 17 07:43:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/CSLSampleRejected/Receiver/CSL_SRTest_Receiver_exec.h:
